flexbox content added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
     <title>CSS Flexbox</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="box box-1">A</div>
+      <div class="box box-2">B</div>
+      <div class="box box-3">C</div>
+      <div class="box box-1">D</div>
+      <div class="box box-2">E</div>
+      <div class="box box-3">F</div>
+      <div class="box box-1">G</div>
+      <div class="box box-2">H</div>
+      <div class="box box-3">I</div>
+      <div class="box box-1">J</div>
+      <div class="box box-2">K</div>
+      <div class="box box-3">L</div>
+    </div>
+  </body>
 </html>
